<resources>
    <string name="app_name">KAHOOT! </string>
    <string name="ver">Consultar preguntas</string>
    <string name="pregunta">Pregunta</string>
    <string name="preguntas">Preguntas</string>
    <string name="configurar">Configurar pregunta</string>
    <string name="enrique_perez_pablo_mart_nez">Enrique Perez • Pablo Martínez</string>
    <string name="kahoot">KAHOOT!</string>
    <string name="listado_preguntas">Listado de preguntas</string>
    <string name="icono_home">Icono home</string>
    <string name="guardar_pregunta">Guardar Pregunta</string>
    <string name="n_mero_de_respuesta_correcta_1_4">Número de respuesta correcta (1–4)</string>
    <string name="respuesta_4">Respuesta 4</string>
    <string name="respuesta_3">Respuesta 3</string>
    <string name="respuesta_2">Respuesta 2</string>
    <string name="respuesta_1">Respuesta 1</string>
    <string name="ingresa_tu_pregunta">Ingresa tu pregunta</string>
    <string name="crear_nueva_pregunta">Crear nueva pregunta</string>
    <string name="preguntas_creadas">Preguntas creadas:</string>
    <string name="icono_configurar">Icono configurar</string>
    <string name="salir">Atrás</string>
    <string name="contestar">Contestar</string>
    <string name="icono_jugar">Icono jugar</string>
    <string name="pregunta_actual">Pregunta actual\n</string>
    <string name="jugar">Jugar</string>
    <string name="empezar">Empezar juego</string>
    <string name="selecciona_respuesta">Selecciona una respuesta</string>
    <string name="bienvenido">Bienvenido a </string>
    <string name="respuesta_1_dos">a)</string>
    <string name="respuesta_2_dos">b)</string>
    <string name="respuesta_3_dos">c)</string>
    <string name="respuesta_4_dos">d)</string>
    <string name="respuesta_correcta">Respuesta correcta: ?</string>
    <string name="resultados">Resultados</string>
    <string name="volver_menu">Volver al menú</string>
    <string name="resultados_obtenidos">Resultados Obtenidos</string>
    <string name="todo">TODO</string>
    <string name="eliminar_pregunta">Eliminar pregunta</string>

</resources>